[tool.poetry]
name = "datetime-experiment"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "datetime_experiment"}]

[tool.poetry.dependencies]
python = "^3.9"
python-dateutil = "^2.9.0.post0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
